# spectrofy

./: LICENSE  README.md  index.html  index.md  spectrofy.cabal  spectrofy.hs
Spectrofy/: CLI.hs  Synth.hs
