name:          spectrofy
version:       0.0.2
synopsis:      Image to spectrogram converter
license:       BSD3
license-file:  LICENSE
author:        8c6794b6
maintainer:    8c6794b6@gmail.com
category:      Sound, Graphics
build-type:    Simple
cabal-version: >=1.2
homepage:      http://8c6794b6.github.com/spectrofy
Description:
  Converts image to sound file.
  .
  Spectrogram of result sound file resembles input image. Currently
  supports reading BMP image and writing WAV audio.

flag dev
  description:
    Add developer option
  default:
    False

source-repository head
  type:     git
  location: https://github.com/8c6794b6/spectrofy.git

library
  ghc-options:
    -Wall
  ghc-prof-options:
    -auto-all -caf-all
  exposed-modules:
    Spectrofy.CLI
    Spectrofy.Synth
  build-depends:
    base >= 4.0 && < 5.0,
    repa >= 3.2.3,
    repa-fftw >= 3.2.3,
    repa-io >= 3.2.3.2,
    repa-sndfile >= 3.2.3

executable spectrofy
  Main-is:
    spectrofy.hs
  ghc-options:
    -Wall -fno-warn-unused-do-bind
    -O2 -rtsopts -threaded
  ghc-prof-options:
    -auto-all -caf-all
